--- a/hdcevents/public/css/styles.css
+++ b/hdcevents/public/css/styles.css
@@ -206,6 +206,10 @@ header {
 .dashboard-events-container th{
   width: 25%;
 }
+
+.dashboard-events-container form{
+  display: inline-block;
+}
 /* footer */
 footer {
   text-align: center;
